# family_tree

./: .gitignore  README.md  pyproject.toml
src/family_tree/model/: errors.py  person.py
src/family_tree/view/: view.py
tests/: test_family_tree.py  test_person.py  test_view.py
