[tool.poetry]
name = "family_tree"
version = "0.1.0"
description = "Drawing family tree"
authors = ["pr0f37 <adam.nowik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
